--- a/configure.in
+++ b/configure.in
@@ -1926,7 +1926,7 @@ G=`eval echo ${piddir}` ; G=`eval echo ${G}`
 H=`eval echo ${user_path}` ; H=`eval echo ${H}`
 
 echo ""
-echo "OpenSSH configured has been configured with the following options."
+echo "OpenSSH has been configured with the following options:"
 echo "                 User binaries: $B"
 echo "               System binaries: $C"
 echo "           Configuration files: $D"
