--- a/configure.in
+++ b/configure.in
@@ -179,6 +179,7 @@ mips-sony-bsd|mips-sony-newsos4)
 	CPPFLAGS="$CPPFLAGS -I/usr/local/include"
 	LDFLAGS="$LDFLAGS -L/usr/local/lib"
 	LIBS="$LIBS -lc89 -lnsl -lgen -lsocket"
+	AC_DEFINE(HAVE_BOGUS_SYS_QUEUE_H)
 	;;
 *-sni-sysv*)
 	CPPFLAGS="$CPPFLAGS -I/usr/local/include"
