--- a/configure.in
+++ b/configure.in
@@ -237,7 +237,7 @@ mips-sony-bsd|mips-sony-newsos4)
 	MANTYPE=man
 	;;
 *-dec-osf*)
-	if test ! -z "USE_SIA" ; then
+	if test ! -z "$USE_SIA" ; then
 		AC_MSG_CHECKING(for Digital Unix Security Integration Architecture)
 		if test -f /etc/sia/matrix.conf; then
 			AC_MSG_RESULT(yes)
