--- a/configure.in
+++ b/configure.in
@@ -78,13 +78,13 @@ case "$host" in
 	if test -z "$GCC"; then
 		CFLAGS="$CFLAGS -Ae"
 	fi
-	CPPFLAGS="$CPPFLAGS -D_HPUX_SOURCE"
+	CPPFLAGS="$CPPFLAGS -D_HPUX_SOURCE -D_XOPEN_SOURCE -D_XOPEN_SOURCE_EXTENDED=1"
 	IPADDR_IN_DISPLAY=yes
 	AC_DEFINE(USE_PIPES)
 	AC_DEFINE(DISABLE_SHADOW)
 	AC_DEFINE(DISABLE_UTMP)
 	AC_DEFINE(SPT_TYPE,SPT_PSTAT)
-	LIBS="$LIBS -lsec"
+	LIBS="$LIBS -lxnet -lsec"
 	;;
 *-*-hpux11*)
 	CPPFLAGS="$CPPFLAGS -D_HPUX_SOURCE -D_XOPEN_SOURCE -D_XOPEN_SOURCE_EXTENDED=1"
