--- a/Makefile.in
+++ b/Makefile.in
@@ -140,18 +140,24 @@ $(CONFIGFILES): $(CONFIGFILES_IN)
 	$(FIXPATHSCMD) $(srcdir)/$${conffile} > $@
 
 clean:
-	(cd openbsd-compat; $(MAKE) clean)
 	rm -f *.o *.a $(TARGETS) logintest config.cache config.log 
 	rm -f *.out core
+	(cd openbsd-compat; $(MAKE) clean)
 
-distclean: clean
-	(cd openbsd-compat; $(MAKE) distclean)
+distclean:
+	rm -f *.o *.a $(TARGETS) logintest config.cache config.log 
+	rm -f *.out core
 	rm -f Makefile config.h config.status ssh_prng_cmds *~
+	(cd openbsd-compat; $(MAKE) distclean)
+
+veryclean:
+	rm -f configure config.h.in *.0
+	rm -f *.o *.a $(TARGETS) logintest config.cache config.log 
+	rm -f *.out core
+	rm -f Makefile config.h config.status ssh_prng_cmds *~
+	(cd openbsd-compat; $(MAKE) distclean)
 
 mrproper: distclean
-
-veryclean: distclean
-	rm -f configure config.h.in *.0
 
 catman-do:
 	@for f in $(MANPAGES_IN) ; do \
