--- a/Makefile.in
+++ b/Makefile.in
@@ -201,10 +201,13 @@ clean:	regressclean
 distclean:	regressclean
 	rm -f *.o *.a $(TARGETS) logintest config.cache config.log
 	rm -f *.out core
-	rm -f Makefile config.h config.status ssh_prng_cmds *~
+	rm -f Makefile buildpkg.sh config.h config.status ssh_prng_cmds *~
 	rm -rf autom4te.cache
 	(cd openbsd-compat && $(MAKE) distclean)
 	(cd scard && $(MAKE) distclean)
+	if test -d pkg ; then \
+		rm -fr pkg ; \
+	fi
 
 veryclean: distclean
 	rm -f configure config.h.in *.0
@@ -407,3 +410,9 @@ regressclean:
 	if [ -f regress/Makefile -a -r regress/Makefile ]; then \
 		(cd regress && $(MAKE) clean) \
 	fi
+
+package: $(CONFIGFILES) ssh_prng_cmds.out $(MANPAGES) $(TARGETS)
+	if [ "@MAKE_PACKAGE_SUPPORTED@" = yes ]; then \
+		sh buildpkg.sh; \
+	fi
+
